# univer_pool_allocator

./: CMakeLists.txt  LICENSE  README.md  TODO.md  run_tests.bat  run_tests.sh
.github/workflows/: cmake.yml
docs/: design_notes.md
example/: CMakeLists.txt  Event.h  main.cpp
include/: Event.h  EventFromPool.h
include/pkg/: pkg.h
include/univer_pool_allocator/: ChunkAllocator.h  MemoryPoolAllocator.h  MemoryPoolChunk.h  MemoryPoolContainer.h  PoolAllocator.h  PoolObject.h
src/: Event.h  main.cpp  source.cpp
src/pkg/: pkg.cpp
tests/: CMakeLists.txt  test.cpp
